--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             width: 90%;
             max-width: 600px;
         }
-        input, button, select, textarea {
+        select, button, textarea, input {
             width: 100%;
             padding: 10px;
             margin: 5px 0;
@@ -38,6 +38,34 @@
         }
         button:hover {
             background-color: #0056b3;
+        }
+        .searchable {
+            position: relative;
+            width: 100%;
+        }
+        .searchable input {
+            padding: 10px;
+            width: 100%;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+        .searchable .options {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            max-height: 150px;
+            overflow-y: auto;
+            background: white;
+            border: 1px solid #ccc;
+            z-index: 1000;
+        }
+        .searchable .options div {
+            padding: 10px;
+            cursor: pointer;
+        }
+        .searchable .options div:hover {
+            background: #f4f4f4;
         }
         .json-output {
             white-space: pre-wrap;
@@ -60,13 +88,22 @@
     </div>
     
     <div class="section">
-        <h2>Tables & Rows</h2>
-        <label for="tableName">Table Name</label>
-        <input type="text" id="tableName" placeholder="Enter table name (without .csv)">
-        <label for="rowName">Row Name</label>
-        <input type="text" id="rowName" placeholder="Enter row name">
-        <label for="columnName">Column Name</label>
-        <input type="text" id="columnName" placeholder="Enter column name">
+        <h2>Tables, Rows, and Columns</h2>
+        <div class="searchable">
+            <label for="tableSearch">Search Table</label>
+            <input type="text" id="tableSearch" placeholder="Search tables..." oninput="filterOptions('tableSearch', 'tableOptions')">
+            <div class="options" id="tableOptions"></div>
+        </div>
+        <div class="searchable">
+            <label for="rowSearch">Search Row</label>
+            <input type="text" id="rowSearch" placeholder="Search rows..." oninput="filterOptions('rowSearch', 'rowOptions')">
+            <div class="options" id="rowOptions"></div>
+        </div>
+        <div class="searchable">
+            <label for="columnSearch">Search Column</label>
+            <input type="text" id="columnSearch" placeholder="Search columns..." oninput="filterOptions('columnSearch', 'columnOptions')">
+            <div class="options" id="columnOptions"></div>
+        </div>
         <label for="columnValue">Column Value</label>
         <input type="text" id="columnValue" placeholder="Enter column value">
         <button onclick="addModification()">Add Modification</button>
@@ -77,71 +114,6 @@
         <div id="jsonDisplay" class="json-output"></div>
     </div>
 
-    <script>
-        const modData = {
-            "@title": "",
-            "@description": "",
-        };
-
-        function setBaseData() {
-            const title = document.getElementById('modTitle').value;
-            const description = document.getElementById('modDescription').value;
-
-            if (!title || !description) {
-                alert("Please provide both title and description.");
-                return;
-            }
-
-            modData["@title"] = title;
-            modData["@description"] = description;
-
-            alert("Base data set successfully!");
-        }
-
-        function addModification() {
-            const tableName = document.getElementById('tableName').value;
-            const rowName = document.getElementById('rowName').value;
-            const columnName = document.getElementById('columnName').value;
-            const columnValue = document.getElementById('columnValue').value;
-
-            if (!tableName || !rowName || !columnName || !columnValue) {
-                alert("Please fill in all fields.");
-                return;
-            }
-
-            // Ensure table exists
-            if (!modData[tableName]) {
-                modData[tableName] = {};
-            }
-
-            // Ensure row exists
-            if (!modData[tableName][rowName]) {
-                modData[tableName][rowName] = {};
-            }
-
-            // Add column value
-            try {
-                // Try to parse as JSON (for booleans or numbers)
-                modData[tableName][rowName][columnName] = JSON.parse(columnValue);
-            } catch {
-                // Fallback to string
-                modData[tableName][rowName][columnName] = columnValue;
-            }
-
-            alert(`Modification added to ${tableName} -> ${rowName} -> ${columnName}`);
-        }
-
-        function exportJSON() {
-            const jsonOutput = JSON.stringify(modData, null, 4);
-            document.getElementById('jsonDisplay').textContent = jsonOutput;
-
-            // Download JSON file
-            const blob = new Blob([jsonOutput], { type: 'application/json' });
-            const link = document.createElement('a');
-            link.href = URL.createObjectURL(blob);
-            link.download = 'mod.json';
-            link.click();
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
