--- a/ai.html
+++ b/ai.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT JSON Builder</title>
+    <title>Ai Nulls brawl mod Builder</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -78,7 +78,7 @@
     </style>
 </head>
 <body>
-    <h1>ChatGPT JSON Builder</h1>
+    <h1>AI Nulls brawl mod Builder</h1>
     <div class="chat-container">
         <div id="chatBox" class="chat-box"></div>
         <div class="input-container">
