--- a/title.html
+++ b/title.html
@@ -56,7 +56,7 @@
         </div>
         <div class="input-group">
             <select id="languageSelector" onchange="updateLanguage()">
-                <option value="texts">English</option>
+                <option value="texts">English (первое, что вам нужно сделать перед началом редактирования"выберите язык")(the first thing you need to do before editing)</option>
                 <option value="ar">Arabic</option>
                 <option value="ru">Russian</option>
             </select>
